[package]
name = "slist"
version = "0.1.2"
authors = ["Maros Grego <maros@grego.site>"]
edition = "2018"
description = "Algebraic lists with statically determined size that live on stack."
repository = "https://github.com/grego/slist"
readme = "README.md"
license = "MIT"
categories = ["data-structures", "mathematics", "no-std", "rust-patterns"]
keywords = ["list", "static", "const-generics"]

[dependencies]
slist-derive = { version = "0.1.0" }

[workspace]
